--- a/src/app/components/Footer.module.css
+++ b/src/app/components/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  background: linear-gradient(135deg, #d46b3a 0%, #ff9034 50%, #d8771d 100%);
+  background: linear-gradient(135deg, #3a9bd4 0%, #347bff 50%, #1dc2d8 100%);
   color: white;
   position: relative;
   overflow: hidden;
